# victims-of-weak-teams

./: .editorconfig  .pre-commit-config.yaml  .secrets.baseline  README.md  package-lock.json  package.json  pyproject.toml
public/: index.html  manifest.json
src/: App.js  app.scss  config.json  index.js  index.scss
src/components/BasicElements/: BasicElements.js  Funding.js  _basic-elements.scss  index.js
src/components/Info/: Info.js  _info.scss
src/components/PageHeader/: Outline.js  PageHeader.js  _page-header.scss  index.js
src/content/AboutPage/: AboutPage.js  _about-page.scss
src/content/AuctionPage/: AuctionPage.js  InformationModal.js  _auction-page.scss  index.js
src/content/LandingPage/: LandingPage.js  Links.js  _landing-page.scss
src/content/LeaguePage/: DataProcessors.js  Leaderboard.js  LeaguePage.js  Trends.js  _league-page.scss  index.js
src/content/LeaguePage/data/: 81463.json
src/content/ResourcePage/: Links.js  ResourcePage.js  index.js
tests/db_updates/: test_season_info.py
vowt/: utils.py
vowt/schemas/: constants.py  season_data.py
vowt/scripts/: update_season_info.py
