[project]
name = "vowt"
requires-python = ">=3.13"
version = "0.0.0"

dependencies = [
    "pydantic",
    "requests",
    "pymongo[srv]",
    "certifi",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "detect-secrets", "pre-commit"]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://vowt.fantasy.com"
source = "https://github.com/TathagataChakraborti/victims-of-weak-teams"

[tool.setuptools.packages.find]
where = ["vowt"]

[tool.mypy]
python_version="3.13"
mypy_path = ""

show_column_numbers = true

# show error messages from unrelated files
follow_imports = "normal"

# be strict
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true

# Unreachable blocks have been an issue when compiling mypyc, let's try
# to avoid 'em in the first place.
warn_unreachable = true

# The following are off by default.  Flip them on if you feel adventurous.
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B"
]

ignore = [
    "B905" # ignore requiring `strict` to be specified when using `zip`
]

unfixable = [
    "B" # don't attempt to fix bugbear issues
]
